# ce-mcp

./: .claude.json  .gitignore  CLAUDE.md  CLAUDE_CODE_SETUP.md  EXPERIMENTAL_COMPILERS.md  LIBRARY_SUPPORT_DOCUMENTATION.md  LICENSE  OPTIMIZED_COMPILER_FIELDS.md  README.md  mypy.ini  pyproject.toml  run_tests.py  setup-claude-code.ps1  setup-claude-code.sh  setup.sh
.github/workflows/: ci.yml
ce_mcp/: __init__.py  api_client.py  assembly_diff.py  cli.py  config.py  experimental_utils.py  library_utils.py  server.py  tools.py  utils.py
docs/: ADDITIONAL_TOOLS_PROPOSAL.md  IMPLEMENTATION_STATUS.md  LIBRARY_SUPPORT_IMPLEMENTATION_PLAN.md  REMOTE_MCP_ARCHITECTURE.md  TOOLS_INTEGRATION_PLAN.md  available_tools.md  compiler-explorer-mcp-spec.md
examples/claude-code-config/: .claude.json  README.md
tests/: __init__.py  test_api_client.py  test_assembly_diff.py  test_assembly_diff_arch.py  test_cmake.py  test_config.py  test_integration.py  test_server.py  test_tools.py  test_utils.py
