[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ce-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Compiler Explorer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Compiler Explorer Team", email = "team@godbolt.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=0.1.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "aioresponses>=0.7.6",
]

[project.scripts]
ce-mcp = "ce_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/compiler-explorer/ce-mcp"
Repository = "https://github.com/compiler-explorer/ce-mcp"
Issues = "https://github.com/compiler-explorer/ce-mcp/issues"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]